--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "homepage": "https://14rego.github.io/job-search/regan-bourland",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "inline-source": "^8.0.3",
-    "moment": "^2.30.1"
+    "inline-source": "^8.0.3"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.19"
   }
 }
